cmake_minimum_required(VERSION 3.20)
project(Skate3Recomp)

# Set C++ standard
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_compile_options("/clang:-msse4.1")
add_compile_options("/clang:-mavx")


# Add source files
set(SOURCES
        main.cpp
        ppc/ppc_func_mapping.cpp
        ppc/ppc_recomp.0.cpp
        ppc/ppc_recomp.1.cpp
        ppc/ppc_recomp.2.cpp
        ppc/ppc_recomp.3.cpp
        ppc/ppc_recomp.4.cpp
        ppc/ppc_recomp.5.cpp
        ppc/ppc_recomp.6.cpp
        ppc/ppc_recomp.7.cpp
        ppc/ppc_recomp.8.cpp
        ppc/ppc_recomp.9.cpp
        ppc/ppc_recomp.10.cpp
        ppc/ppc_recomp.11.cpp
        ppc/ppc_recomp.12.cpp
        ppc/ppc_recomp.13.cpp
        ppc/ppc_recomp.14.cpp
        ppc/ppc_recomp.15.cpp
        ppc/ppc_recomp.16.cpp
        ppc/ppc_recomp.17.cpp
        ppc/ppc_recomp.18.cpp
        ppc/ppc_recomp.19.cpp
        ppc/ppc_recomp.20.cpp
        ppc/ppc_recomp.21.cpp
        ppc/ppc_recomp.22.cpp
        ppc/ppc_recomp.23.cpp
        ppc/ppc_recomp.24.cpp
        ppc/ppc_recomp.25.cpp
        ppc/ppc_recomp.26.cpp
        ppc/ppc_recomp.27.cpp
        ppc/ppc_recomp.28.cpp
        ppc/ppc_recomp.29.cpp
        ppc/ppc_recomp.30.cpp
        ppc/ppc_recomp.31.cpp
        ppc/ppc_recomp.32.cpp
        ppc/ppc_recomp.33.cpp
        ppc/ppc_recomp.34.cpp
        ppc/ppc_recomp.35.cpp
        ppc/ppc_recomp.36.cpp
        ppc/ppc_recomp.37.cpp
        ppc/ppc_recomp.38.cpp
        ppc/ppc_recomp.39.cpp
        ppc/ppc_recomp.40.cpp
        ppc/ppc_recomp.41.cpp
        ppc/ppc_recomp.42.cpp
        ppc/ppc_recomp.43.cpp
        ppc/ppc_recomp.44.cpp
        ppc/ppc_recomp.45.cpp
        ppc/ppc_recomp.46.cpp
        ppc/ppc_recomp.47.cpp
        ppc/ppc_recomp.48.cpp
        ppc/ppc_recomp.49.cpp
        ppc/ppc_recomp.50.cpp
        ppc/ppc_recomp.51.cpp
        ppc/ppc_recomp.52.cpp
        ppc/ppc_recomp.53.cpp
        ppc/ppc_recomp.54.cpp
        ppc/ppc_recomp.55.cpp
        ppc/ppc_recomp.56.cpp
        ppc/ppc_recomp.57.cpp
        ppc/ppc_recomp.58.cpp
        ppc/ppc_recomp.59.cpp
        ppc/ppc_recomp.60.cpp
        ppc/ppc_recomp.61.cpp
        ppc/ppc_recomp.62.cpp
        ppc/ppc_recomp.63.cpp
        ppc/ppc_recomp.64.cpp
        ppc/ppc_recomp.65.cpp
        ppc/ppc_recomp.66.cpp
        ppc/ppc_recomp.67.cpp
        ppc/ppc_recomp.68.cpp
        ppc/ppc_recomp.69.cpp
        ppc/ppc_recomp.70.cpp
        ppc/ppc_recomp.71.cpp
        ppc/ppc_recomp.72.cpp
        ppc/ppc_recomp.73.cpp
        ppc/ppc_recomp.74.cpp
        ppc/ppc_recomp.75.cpp
        ppc/ppc_recomp.76.cpp
        ppc/ppc_recomp.77.cpp
        ppc/ppc_recomp.78.cpp
        ppc/ppc_recomp.79.cpp
        ppc/ppc_recomp.80.cpp
        ppc/ppc_recomp.81.cpp
        ppc/ppc_recomp.82.cpp
        ppc/ppc_recomp.83.cpp
        ppc/ppc_recomp.84.cpp
        ppc/ppc_recomp.85.cpp
        ppc/ppc_recomp.86.cpp
        ppc/ppc_recomp.87.cpp
        ppc/ppc_recomp.88.cpp
        ppc/ppc_recomp.89.cpp
        ppc/ppc_recomp.90.cpp
        ppc/ppc_recomp.91.cpp
        ppc/ppc_recomp.92.cpp
        ppc/ppc_recomp.93.cpp
        ppc/ppc_recomp.94.cpp
        ppc/ppc_recomp.95.cpp
        ppc/ppc_recomp.96.cpp
        ppc/ppc_recomp.97.cpp
        ppc/ppc_recomp.98.cpp
        ppc/ppc_recomp.99.cpp
        ppc/ppc_recomp.100.cpp
        ppc/ppc_recomp.101.cpp
        ppc/ppc_recomp.102.cpp
        ppc/ppc_recomp.103.cpp
        ppc/ppc_recomp.104.cpp
        ppc/ppc_recomp.105.cpp
        ppc/ppc_recomp.106.cpp
        ppc/ppc_recomp.107.cpp
        ppc/ppc_recomp.108.cpp
        ppc/ppc_recomp.109.cpp
        ppc/ppc_recomp.110.cpp
        ppc/ppc_recomp.111.cpp
        ppc/ppc_recomp.112.cpp
        ppc/ppc_recomp.113.cpp
        ppc/ppc_recomp.114.cpp
        ppc/ppc_recomp.115.cpp
        ppc/ppc_recomp.116.cpp
        ppc/ppc_recomp.117.cpp
        ppc/ppc_recomp.118.cpp
        ppc/ppc_recomp.119.cpp
        ppc/ppc_recomp.120.cpp
        ppc/ppc_recomp.121.cpp
        ppc/ppc_recomp.122.cpp
        ppc/ppc_recomp.123.cpp
        ppc/ppc_recomp.124.cpp
        ppc/ppc_recomp.125.cpp
        ppc/ppc_recomp.126.cpp
        ppc/ppc_recomp.127.cpp
        ppc/ppc_recomp.128.cpp
        ppc/ppc_recomp.129.cpp
        ppc/ppc_recomp.130.cpp
        ppc/ppc_recomp.131.cpp
        ppc/ppc_recomp.132.cpp
        ppc/ppc_recomp.133.cpp
        ppc/ppc_recomp.134.cpp
        ppc/ppc_recomp.135.cpp
        ppc/ppc_recomp.136.cpp
        ppc/ppc_recomp.137.cpp
        ppc/ppc_recomp.138.cpp
        ppc/ppc_recomp.139.cpp
        ppc/ppc_recomp.140.cpp
        ppc/ppc_recomp.141.cpp
        ppc/ppc_recomp.142.cpp
        ppc/ppc_recomp.143.cpp
        ppc/ppc_recomp.144.cpp
        ppc/ppc_recomp.145.cpp
        ppc/ppc_recomp.146.cpp
        ppc/ppc_recomp.147.cpp
        ppc/ppc_recomp.148.cpp
        ppc/ppc_recomp.149.cpp
        ppc/ppc_recomp.150.cpp
        ppc/ppc_recomp.151.cpp
        ppc/ppc_recomp.152.cpp
        ppc/ppc_recomp.153.cpp
        ppc/ppc_recomp.154.cpp
        ppc/ppc_recomp.155.cpp
        ppc/ppc_recomp.156.cpp
        ppc/ppc_recomp.157.cpp
        ppc/ppc_recomp.158.cpp
        ppc/ppc_recomp.159.cpp
        ppc/ppc_recomp.160.cpp
        ppc/ppc_recomp.161.cpp
        ppc/ppc_recomp.162.cpp
        ppc/ppc_recomp.163.cpp
        ppc/ppc_recomp.164.cpp
        ppc/ppc_recomp.165.cpp
        ppc/ppc_recomp.166.cpp
        ppc/ppc_recomp.167.cpp
        ppc/ppc_recomp.168.cpp
        ppc/ppc_recomp.169.cpp
        ppc/ppc_recomp.170.cpp
        ppc/ppc_recomp.171.cpp
        ppc/ppc_recomp.172.cpp
        ppc/ppc_recomp.173.cpp
        ppc/ppc_recomp.174.cpp
        ppc/ppc_recomp.175.cpp
        ppc/ppc_recomp.176.cpp
        ppc/ppc_recomp.177.cpp
        ppc/ppc_recomp.178.cpp
        ppc/ppc_recomp.179.cpp
        ppc/ppc_recomp.180.cpp
        ppc/ppc_recomp.181.cpp
        ppc/ppc_recomp.182.cpp
        ppc/ppc_recomp.183.cpp
        ppc/ppc_recomp.184.cpp
        ppc/ppc_recomp.185.cpp
        kernal.cpp
)

set(HEADERS
        ppc/ppc_recomp_shared.h
)


# Create executable
add_executable(${PROJECT_NAME} ${SOURCES} ${HEADERS})
target_compile_options(${PROJECT_NAME} PRIVATE -Wno-exceptions)

add_subdirectory(tools/XenonRecomp)
